<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.MakeRequestActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:text="@string/write_a_heart_felt_message_and_add_an_image_for_the_community_somebody_will_definitely_help_you_if_possible"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="7dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/messageEditText"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/message"
            android:gravity="top"
            android:textAlignment="gravity"
            android:minLines="6"
            android:maxLines="10"
            android:background="@drawable/border_background"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/post_image"
                android:padding="5dp"
                android:src="@drawable/ic_image_24"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/choose_text"
                android:text="@string/choose_image_text"
                android:textColor="@android:color/holo_red_light"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/postRequestButton"
            android:text="@string/post_request_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:layout_width="200dp"
            android:layout_height="40dp"/>

    </LinearLayout>

</ScrollView>