<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        android:background="@android:color/holo_red_light"
        app:menu="@menu/search_menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="#FAFAFA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pick_location"
            android:padding="5dp"
            android:layout_margin="8dp"
            android:textAlignment="gravity"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:text="@string/choose_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_location_black_24"
            app:drawableTint="@android:color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/LinearLayout"
        android:layout_above="@+id/make_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/make_request_button"
        android:padding="12dp"
        android:text="@string/make_request_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:background="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>